<resources>
    <string name="app_name">Canli Tv Mobile Tv Turkish Last</string>


    <string name="app_package_name">com.halitpractice.tvlangsungturkilight</string>


    <!--               Test App Ad ID   -->
                <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>

    <!--               Test Ad Unit ID         -->
                <string name="admob_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <!--               Test Ad Interstitial ID         -->
                <string name="admob_interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>



    <string name="image_description">Description of the image</string>
    <string name="error_message">Error!</string>
    <string name="url_empty_or_null_message">URL is empty or null</string>
    <string name="no_text_available">Metin mevcut değil</string>


    <string name="loading_message">Lütfen bekleyin, Film Sitesi yükleniyor…</string>
    <string name="back_button_description">Back to Main</string>
    <string name="navigation_drawer_open">nav_open</string>
    <string name="navigation_drawer_close">nav_close</string>


    <string name="aulia_app">Aulia</string>
    <!--    <string name="aulia_apps">Apps Universe</string>-->
    <string name="aulia_apps">Apps Semesta</string>
    <string name="disclaimer_text">Uyarı</string>
    <string name="check_for_update_text">Güncelle</string>


    <string name="ulusal_tvler">Eksra Tv\'ler</string>
    <string name="ulusal_tvler_kategori">Eksra Tv\'ler Kategori</string>
    <!--    <string name="no_browser_found_message">Chrome Custom Tabs is required to open this link. Please install Google Chrome for the best experience.</string>-->
    <string name="no_browser_found_message">Bu bağlantıyı açmak için Chrome Custom Tabs gereklidir. En iyi deneyim için lütfen Google Chrome\'u yükleyin.</string>
    <string name="video_id_empty_or_null_message">Video ID is empty or null</string>
    <string name="url_bulunamadi">URL bulunamadi</string>
    <string name="yerel_tvler">Türk Tv\'ler</string>
    <string name="yerel_tvler_kategori">Türk Tv\'ler Kategori</string>
    <string name="cizgi_filmler">Çizgi Filmler</string>
    <string name="ytb_extra">YTB Ekstra</string>
    <string name="ytb_extra_kategori">YTB Ekstra - Kategori</string>
    <string name="ytb_extra_countries">YTB Ekstra - Ülkeler</string>
    <string name="ytb_extra_language">YTB Ekstra - DİL</string>
    <string name="ytb_extra_category_not_found">Kategori hatasi</string>
    <string name="ytb_extra_country_not_found">Ülke hatasi</string>
    <string name="country">Country!</string>
    <string name="bolge">B.</string>
    <string name="category_yerel">Kategori:</string>
    <string name="gazeteler">Gazeteler</string>
    <string name="gazeteler_kategori">Gazeteler Kategori</string>
    <string name="regional">Gazeteler Bölgesel</string>
    <string name="gazeteler_ulke">Gazeteler Ülkeler</string>
    <string name="dunyaTv">Dünya Tv\'leri</string>
    <string name="ulkeler">Dünya Tv\'leri Ülkeler</string>
    <string name="dil">Dünya Tv\'leri DİL</string>
    <string name="dunyaTvKategori">Dünya Tv\'leri Kategori</string>
    <string name="dunyaTvUlkeler">Dünya Tv\'leri Ülkeler</string>
    <string name="dunyaTvDil">Dünya Tv\'leri DİL</string>
    <string name="radyo_dinle">Radyo Dinle</string>
    <string name="yabanci_filmler">Yabancı Filmler</string>
    <string name="her_tur_tv_video">Ytb Spor - Sinema - Haber - Çizgi Film</string>
    <string name="her_tur_tv_video_multiline">Ytb Spor \n Sinema - \nHaber - \nÇizgi Film</string>
    <string name="close_button_label">Close</string>
    <string name="kategori_bulunamadı">Kategori Bulunamadı</string>
    <string name="category">Category!</string>
    <string name="category_hatasi">Category Bulunamadi!</string>

</resources>