<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/yerel_tv"
            android:icon="@drawable/turk_bayrak"
            android:title="@string/yerel_tvler" />

        <item
            android:id="@+id/nav_yerel_tv_kategori"
            android:icon="@drawable/category"
            android:title="@string/yerel_tvler_kategori" />

        <item
            android:id="@+id/radyo"
            android:icon="@drawable/ic_radio"
            android:title="@string/radyo_dinle" />

        <item
            android:id="@+id/dunyaTvDrawer"
            android:icon="@drawable/dunya_icon"
            android:title="@string/dunyaTv" />

        <item
            android:id="@+id/dunyaTvCountriesDrawer"
            android:icon="@drawable/dunya_icon"
            android:title="@string/dunyaTvUlkeler" />

        <item
            android:id="@+id/dunyaTvCategoryDrawer"
            android:icon="@drawable/category"
            android:title="@string/dunyaTvKategori" />

        <item
            android:id="@+id/dunyaTvLanguageDrawer"
            android:icon="@drawable/dunya_icon"
            android:title="@string/dunyaTvDil" />

        <item
            android:id="@+id/ekstraTv"
            android:icon="@drawable/turk_bayrak"
            android:title="@string/ulusal_tvler" />

        <item
            android:id="@+id/ekstraTvCategories"
            android:icon="@drawable/category"
            android:title="@string/ulusal_tvler_kategori" />


        <item
            android:id="@+id/turkYabanciFilm"
            android:icon="@drawable/ic_movie"
            android:title="@string/yabanci_filmler" />


        <item
            android:id="@+id/ytbExtraTv"
            android:icon="@drawable/ytb"
            android:title="@string/ytb_extra" />

        <item
            android:id="@+id/ytbExtraTvCategory"
            android:icon="@drawable/ytb"
            android:title="@string/ytb_extra_kategori" />

        <item
            android:id="@+id/ytbExtraTvCountry"
            android:icon="@drawable/ytb"
            android:title="@string/ytb_extra_countries" />

        <item
            android:id="@+id/ytbExtraTvLanguageDrawer"
            android:icon="@drawable/ytb"
            android:title="@string/ytb_extra_language" />


        <item
            android:id="@+id/gazeteler"
            android:icon="@drawable/gazeteler"
            android:title="@string/gazeteler" />

        <item
            android:id="@+id/gazetelerCategory"
            android:icon="@drawable/gazeteler"
            android:title="@string/gazeteler_kategori" />

        <item
            android:id="@+id/gazetelerRegigional"
            android:icon="@drawable/gazeteler"
            android:title="@string/regional" />

        <item
            android:id="@+id/gazetelerCountry"
            android:icon="@drawable/gazeteler"
            android:title="@string/gazeteler_ulke" />


    </group>

</menu>
