<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#177A93"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <TextView
        android:id="@+id/auliaApp"
        style="@style/NavigationHeaderTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/aulia_app"
        android:textSize="53sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/auliaApps"
        style="@style/NavigationHeaderTextStyleWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/aulia_apps"
        android:textSize="33sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auliaApp" />

    <TextView
        android:id="@+id/disclaimer"
        style="@style/Navigation_Kontrol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/disclaimer_text"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auliaApps" />

    <TextView
        android:id="@+id/checkForUpdate"
        style="@style/Navigation_Kontrol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:text="@string/check_for_update_text"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/disclaimer"
        app:layout_constraintStart_toEndOf="@+id/disclaimer"
        app:layout_constraintTop_toTopOf="@+id/disclaimer" />

</androidx.constraintlayout.widget.ConstraintLayout>
