<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/firstConstraint"
    android:background="#FFFFFF">

    <include layout="@layout/app_bar_main" />

    <TextView
        android:id="@+id/marqueeTextViewMainActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:padding="16dp"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:textColor="@color/button"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="90dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/indianTvCardView"
                android:layout_width="match_parent"
                android:layout_height="83dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/contentMainCardView"
                app:cardCornerRadius="10dp"
                app:cardElevation="20dp"
                android:focusable="true"
                android:clickable="true">

                <LinearLayout
                    android:id="@+id/indianTvLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_margin="15dp"
                        android:layout_weight="2"
                        android:src="@drawable/turk_bayrak"
                        app:civ_border_color="#2c6087"
                        app:civ_border_width="2dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text="@string/ulusal_tvler"
                        android:textColor="@color/contentMainTexView"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_margin="1dp"
                        android:layout_weight="2"
                        android:src="@drawable/ic_navigate_next" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="83dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/contentMainCardView"

                app:cardCornerRadius="10dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:id="@+id/indianTvCategory"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_margin="15dp"
                        android:layout_weight="2"
                        android:src="@drawable/category"
                        app:cardBackgroundColor="@color/contentMainCardView" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text="@string/ulusal_tvler_kategori"
                        android:textColor="@color/contentMainTexView"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_margin="1dp"
                        android:layout_weight="2"
                        android:src="@drawable/ic_navigate_next" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/indianExtraTv"
                android:layout_width="match_parent"
                android:layout_height="83dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/contentMainCardView"
                app:cardCornerRadius="10dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:id="@+id/indiaExtraTv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_margin="15dp"
                        android:layout_weight="2"
                        android:src="@drawable/turk_bayrak"
                        app:civ_border_color="#2c6087"
                        app:civ_border_width="2dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text="@string/yerel_tvler"
                        android:textColor="@color/contentMainTexView"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_margin="1dp"
                        android:layout_weight="2"
                        android:src="@drawable/ic_navigate_next" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/indianCartoons"
                android:layout_width="match_parent"
                android:layout_height="83dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/contentMainCardView"
                app:cardCornerRadius="10dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:id="@+id/indiaTvCartoon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_margin="15dp"
                        android:layout_weight="2"
                        android:src="@drawable/category"
                        app:civ_border_color="#2c6087" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text="@string/yerel_tvler_kategori"
                        android:textColor="@color/contentMainTexView"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_margin="1dp"
                        android:layout_weight="2"
                        android:src="@drawable/ic_navigate_next" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/indianMovies"
                android:layout_width="match_parent"
                android:layout_height="83dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/contentMainCardView"
                app:cardCornerRadius="10dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:id="@+id/indiaTvMovie"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_margin="15dp"
                        android:layout_weight="2"
                        android:src="@drawable/ic_movie"
                        app:civ_border_color="#2c6087" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text="@string/cizgi_filmler"
                        android:textColor="@color/contentMainTexView"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_margin="1dp"
                        android:layout_weight="2"
                        android:src="@drawable/ic_navigate_next" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="83dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/contentMainCardView"
                app:cardCornerRadius="10dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:id="@+id/indiaWorld"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/radyoDinle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text="@string/radyo_dinle"
                        android:textColor="@color/contentMainTexView"
                        android:textSize="17sp"
                        android:layout_marginLeft="15dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/yabanciMovie"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text="@string/yabanci_filmler"
                        android:textColor="@color/contentMainTexView"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <ImageView
            android:id="@+id/closeBtnMainActivity"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_exit_main"
            android:contentDescription="@string/close_button_label" />
        <com.google.android.gms.ads.AdView
            android:id="@+id/adViewMainActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:adSize="FULL_BANNER"
            app:adUnitId="@string/admob_ad_unit_id">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
